{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 217,
  "lineage": "ec81404d-2349-5805-fd61-bcbd995f5e08",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c68f701d8090592",
            "arn": "arn:aws:ec2:us-east-1:975050297105:instance/i-0fd9d3afc87ad620c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd9d3afc87ad620c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca63978392b0ab4f",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "public_ip": "52.201.157.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0313dfe5c0e1f5ed1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08f8372fd17040605"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e42008c3bc932360",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f8372fd17040605"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.ec2_sg",
            "module.subnets.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c68f701d8090592",
            "arn": "arn:aws:ec2:us-east-1:975050297105:instance/i-074d6737bf602bbf0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074d6737bf602bbf0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d9fbf6ad179b9674",
            "private_dns": "ip-10-0-2-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.78",
            "public_ip": "44.202.198.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cf6571c69e7c4488",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08f8372fd17040605"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0076145f4ffcc2795",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f8372fd17040605"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.ec2_sg",
            "module.subnets.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050297105:loadbalancer/app/app-lb/4302e21cc9d050b2",
            "arn_suffix": "app/app-lb/4302e21cc9d050b2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-467661811.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050297105:loadbalancer/app/app-lb/4302e21cc9d050b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03286cd5c0f5c54f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0076145f4ffcc2795"
              },
              {
                "subnet_id": "subnet-0e42008c3bc932360"
              }
            ],
            "subnets": [
              "subnet-0076145f4ffcc2795",
              "subnet-0e42008c3bc932360"
            ],
            "vpc_id": "vpc-039e9dc4c7430402f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.lb_sg",
            "module.subnets.aws_subnet.public_subnet_1",
            "module.subnets.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050297105:listener/app/app-lb/4302e21cc9d050b2/c2ce631aedf335d7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975050297105:targetgroup/app-tg/005ebf1b0e7e4c84",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050297105:listener/app/app-lb/4302e21cc9d050b2/c2ce631aedf335d7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975050297105:loadbalancer/app/app-lb/4302e21cc9d050b2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.app_lb",
            "module.load_balancer.aws_lb_target_group.tg",
            "module.security_groups.aws_security_group.lb_sg",
            "module.subnets.aws_subnet.public_subnet_1",
            "module.subnets.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050297105:targetgroup/app-tg/005ebf1b0e7e4c84",
            "arn_suffix": "targetgroup/app-tg/005ebf1b0e7e4c84",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050297105:targetgroup/app-tg/005ebf1b0e7e4c84",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:975050297105:loadbalancer/app/app-lb/4302e21cc9d050b2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-039e9dc4c7430402f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050297105:targetgroup/app-tg/005ebf1b0e7e4c84-20240705072045965000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975050297105:targetgroup/app-tg/005ebf1b0e7e4c84",
            "target_id": "i-0fd9d3afc87ad620c"
          },
          "dependencies": [
            "module.ec2.aws_instance.web_1",
            "module.ec2.aws_instance.web_2",
            "module.load_balancer.aws_lb_target_group.tg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.subnets.aws_subnet.public_subnet_1",
            "module.subnets.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050297105:targetgroup/app-tg/005ebf1b0e7e4c84-20240705072045915500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975050297105:targetgroup/app-tg/005ebf1b0e7e4c84",
            "target_id": "i-074d6737bf602bbf0"
          },
          "dependencies": [
            "module.ec2.aws_instance.web_1",
            "module.ec2.aws_instance.web_2",
            "module.load_balancer.aws_lb_target_group.tg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.subnets.aws_subnet.public_subnet_1",
            "module.subnets.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ebbc79cc85f5e8e",
            "arn": "arn:aws:ec2:us-east-1:975050297105:elastic-ip/eipalloc-06ebbc79cc85f5e8e",
            "association_id": "eipassoc-095f48d2a0ec3c396",
            "domain": "vpc",
            "id": "eipalloc-06ebbc79cc85f5e8e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-039ba0bf00b877b41",
            "private_dns": "ip-10-0-1-121.ec2.internal",
            "private_ip": "10.0.1.121",
            "public_dns": "ec2-44-194-127-195.compute-1.amazonaws.com",
            "public_ip": "44.194.127.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cec84c24223c48b",
            "arn": "arn:aws:ec2:us-east-1:975050297105:elastic-ip/eipalloc-04cec84c24223c48b",
            "association_id": "eipassoc-0101d57cf81e0ee3b",
            "domain": "vpc",
            "id": "eipalloc-04cec84c24223c48b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d058d6ed41107f3b",
            "private_dns": "ip-10-0-2-24.ec2.internal",
            "private_ip": "10.0.2.24",
            "public_dns": "ec2-54-156-243-167.compute-1.amazonaws.com",
            "public_ip": "54.156.243.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ebbc79cc85f5e8e",
            "association_id": "eipassoc-095f48d2a0ec3c396",
            "connectivity_type": "public",
            "id": "nat-0b214acc1712e027c",
            "network_interface_id": "eni-039ba0bf00b877b41",
            "private_ip": "10.0.1.121",
            "public_ip": "44.194.127.195",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e42008c3bc932360"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.subnets.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cec84c24223c48b",
            "association_id": "eipassoc-0101d57cf81e0ee3b",
            "connectivity_type": "public",
            "id": "nat-0e9cc0fa3991988ef",
            "network_interface_id": "eni-0d058d6ed41107f3b",
            "private_ip": "10.0.2.24",
            "public_ip": "54.156.243.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0076145f4ffcc2795"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.subnets.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050297105:route-table/rtb-0d10cda5a6cd16e94",
            "id": "rtb-0d10cda5a6cd16e94",
            "owner_id": "975050297105",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b214acc1712e027c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039e9dc4c7430402f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_1",
            "module.subnets.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee344388ae6c389a",
            "route_table_id": "rtb-0d10cda5a6cd16e94",
            "subnet_id": "subnet-0e42008c3bc932360"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_1",
            "module.nat_gateway.aws_route_table.private",
            "module.subnets.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e77157807c6359f1",
            "route_table_id": "rtb-0d10cda5a6cd16e94",
            "subnet_id": "subnet-0076145f4ffcc2795"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_1",
            "module.nat_gateway.aws_route_table.private",
            "module.subnets.aws_subnet.public_subnet_1",
            "module.subnets.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050297105:security-group/sg-08f8372fd17040605",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f8372fd17040605",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240705063949019500000001",
            "name_prefix": "terraform-",
            "owner_id": "975050297105",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039e9dc4c7430402f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050297105:security-group/sg-03286cd5c0f5c54f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03286cd5c0f5c54f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240705063949028800000002",
            "name_prefix": "terraform-",
            "owner_id": "975050297105",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039e9dc4c7430402f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050297105:security-group/sg-0543ccb7e0f9b9358",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0543ccb7e0f9b9358",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20240705063949035700000003",
            "name_prefix": "terraform-",
            "owner_id": "975050297105",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039e9dc4c7430402f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050297105:subnet/subnet-0589c430c7653e6a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0589c430c7653e6a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050297105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-039e9dc4c7430402f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050297105:subnet/subnet-02951c2242a18e69d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02951c2242a18e69d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050297105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-039e9dc4c7430402f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050297105:subnet/subnet-0e42008c3bc932360",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e42008c3bc932360",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050297105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-039e9dc4c7430402f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050297105:subnet/subnet-0076145f4ffcc2795",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0076145f4ffcc2795",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050297105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-039e9dc4c7430402f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050297105:vpc/vpc-039e9dc4c7430402f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f848264a883a3053",
            "default_route_table_id": "rtb-052fa2a181ee766ae",
            "default_security_group_id": "sg-0ec6858d3fbd1ddd6",
            "dhcp_options_id": "dopt-07ddcf41b8171baf9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039e9dc4c7430402f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052fa2a181ee766ae",
            "owner_id": "975050297105"
          }
        }
      ]
    }
  ]
}